[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/small_present.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/present.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/animations/temple.res" type="SpriteFrames" id=3]
[ext_resource path="res://assets/curtain.png" type="Texture" id=4]
[ext_resource path="res://screens/temple.gd" type="Script" id=5]
[ext_resource path="res://scenes/elf.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/small_pixel_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/spritesheets/textbox_9patch.png" type="Texture" id=8]
[ext_resource path="res://assets/animations/red.res" type="SpriteFrames" id=9]
[ext_resource path="res://assets/animations/santa.res" type="SpriteFrames" id=10]
[ext_resource path="res://assets/animations/chimp.res" type="SpriteFrames" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 4 )

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("curtain_animation/curtain:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -160, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[node name="temple" type="Node2D"]
script = ExtResource( 5 )

[node name="bg" type="AnimatedSprite" parent="."]
position = Vector2( 64, 64 )
frames = ExtResource( 3 )
animation = "clouds"
frame = 2
playing = true

[node name="santa" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 10 )
frame = 24
playing = true
centered = false

[node name="presents" type="Node2D" parent="."]

[node name="small_present" parent="presents" instance=ExtResource( 1 )]
position = Vector2( 111, 78 )
frame = 1

[node name="small_present2" parent="presents" instance=ExtResource( 1 )]
position = Vector2( 17, 91 )
flip_h = true
frame = 3

[node name="present" parent="presents" instance=ExtResource( 2 )]
position = Vector2( 7, 111 )

[node name="present2" parent="presents" instance=ExtResource( 2 )]
position = Vector2( 70, 108 )
frame = 4

[node name="present3" parent="presents" instance=ExtResource( 2 )]
position = Vector2( 30, 126 )
frame = 1

[node name="present4" parent="presents" instance=ExtResource( 2 )]
position = Vector2( 46, 78 )
frame = 5

[node name="elf" parent="." instance=ExtResource( 6 )]
position = Vector2( 56, 119 )

[node name="red" type="AnimatedSprite" parent="."]
position = Vector2( 106, 128 )
frames = ExtResource( 9 )
animation = "run_up"
frame = 1
playing = true
centered = false

[node name="trigger" type="Area2D" parent="red"]
collision_layer = 32
collision_mask = 32

[node name="collision" type="CollisionShape2D" parent="red/trigger"]
visible = false
position = Vector2( 8, 12 )
shape = SubResource( 1 )

[node name="body" type="StaticBody2D" parent="red"]

[node name="collision" type="CollisionShape2D" parent="red/body"]
position = Vector2( 8, 12 )
shape = SubResource( 2 )

[node name="red_walk" type="Tween" parent="."]

[node name="border" type="StaticBody2D" parent="."]

[node name="collision" type="CollisionPolygon2D" parent="border"]
visible = false
build_mode = 1
polygon = PoolVector2Array( 128, 72, 0, 72, 0, 128, 128, 128 )

[node name="textbox" type="NinePatchRect" parent="."]
visible = false
margin_right = 128.0
margin_bottom = 64.0
texture = ExtResource( 8 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="textbox"]
margin_left = 11.0
margin_top = 11.0
margin_right = 117.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 7 )
text = "well this is embarrasing...
there apears to be an error in the code
many apologies user"
autowrap = true
clip_text = true

[node name="curtain_animation" type="AnimationPlayer" parent="."]
anims/up = SubResource( 3 )

[node name="curtain" type="Sprite" parent="curtain_animation"]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="chimp" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 64, 64 )
frames = ExtResource( 11 )
playing = true
[connection signal="animation_finished" from="bg" to="." method="_on_bg_animation_finished"]
[connection signal="frame_changed" from="presents/small_present" to="." method="present_opened"]
[connection signal="frame_changed" from="presents/small_present2" to="." method="present_opened"]
[connection signal="frame_changed" from="presents/present" to="." method="present_opened"]
[connection signal="frame_changed" from="presents/present2" to="." method="present_opened"]
[connection signal="frame_changed" from="presents/present3" to="." method="present_opened"]
[connection signal="frame_changed" from="presents/present4" to="." method="present_opened"]
[connection signal="body_entered" from="red/trigger" to="." method="_on_trigger_body_entered"]
[connection signal="tween_completed" from="red_walk" to="." method="_on_red_walk_tween_completed"]
